Add custom prompt preference
